--- a/themes/bootstrap/css/dashlets.css
+++ b/themes/bootstrap/css/dashlets.css
@@ -20,3 +20,15 @@ div.TimelineDashlet textarea[name=Content].expanded-content {
 	box-shadow: inset 0 0 8px #ccc;
 	height: 50px;
 }
+
+
+div.microPost {
+	padding: 10px;
+	background: #fafafa;
+}
+
+div.microPostContent {
+	border-radius: 10px;
+	background: #fff;
+	padding: 10px;
+}
