Made it so that each post gives a person a number of votes to disperse

--- a/themes/bootstrap/css/dashlets.css
+++ b/themes/bootstrap/css/dashlets.css
@@ -66,6 +66,10 @@ div.dashlet-title {
 	text-decoration: none;
 }
 
+.userFriend {
+	margin-bottom: 5px;
+}
+
 .userProfile {
 	text-align: center;
 }
