FIX Fixed issue with queryOffsetNumber being incorrect. Changed uploadform position

--- a/themes/bootstrap/css/dashlets.css
+++ b/themes/bootstrap/css/dashlets.css
@@ -59,11 +59,17 @@ form.replyForm {
 }
 
 div.uploadForm {
-	position: fixed;
-	bottom: 0px;
-	right: 0px;
-	background: #fff;
+	padding: 10px;
 	display: none;
+	position: fixed;
+	width: 280px;
+	border: 1px solid #666;
+	border-radius: 5px;
+	top: 80px;
+	right: 40px;
+	background: #fff;
+	z-index:2000;
+	
 }
 
 div.dashlet-title {
