Added check in timeline to see whether the user is allowed in or not based on how spammy they are

--- a/microblog/css/timeline.css
+++ b/microblog/css/timeline.css
@@ -67,3 +67,11 @@ div.uploadForm {
 abbr.postTime {
 	margin-left: 20px;
 }
+
+.upCount {
+	margin-right: 10px;
+}
+
+.downCount {
+	margin-left: 10px;
+}
