Updated process of adding a post so that extraction of info is done during a post processing phase. This includes detection of oembed stuff, and automatic extraction of titles if present

--- a/microblog/css/timeline.css
+++ b/microblog/css/timeline.css
@@ -75,3 +75,23 @@ abbr.postTime {
 .downCount {
 	margin-left: 10px;
 }
+
+div.openGraphPost {
+	overflow: auto;
+}
+
+div.openGraphPostContent {
+	margin-left: 120px;
+}
+
+div.openGraphPost .openGraphImage {
+	float: left;
+	padding: 5px;
+	background-color: #eee;
+	
+}
+
+.openGraphImage img {
+	max-width: 100px;
+	max-height: 100px;
+}
