Added markdown parsing and preview

--- a/microblog/css/timeline.css
+++ b/microblog/css/timeline.css
@@ -40,7 +40,7 @@ div.microPostContent {
 	background: transparent;
 }
 
-div.postContent {
+div.postContent, div.postPreview {
 	border-radius: 10px;
 	background: #fff;
 	padding: 10px;
